[ACS-10220] Fix color contrast issue for in folder rule action component

--- a/projects/aca-content/folder-rules/src/rule-details/actions/rule-action.ui-component.scss
+++ b/projects/aca-content/folder-rules/src/rule-details/actions/rule-action.ui-component.scss
@@ -22,6 +22,11 @@
         .adf-textitem-action {
           .adf-textitem-icon {
             margin-left: -10px;
+            color: var(--adf-theme-foreground-text-color-064);
+
+            &:hover {
+              color: var(--adf-theme-foreground-text-color);
+            }
           }
         }
       }
